fix: horizontal scroll

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,6 @@
 
 html {
   box-sizing: border-box;
-  width: 100vw;
   height: 100vh;
 }
 *,
